# aeron_pc

./: README.md  package.xml  setup.cfg  setup.py
.claude/: settings.local.json
config/: controllers.yaml  params.yaml
description/ros2_control/: aeron.ros2_control.xacro
description/urdf/: aeron.urdf  aeron.urdf.xacro  base.xacro  caster.xacro  drive_wheel.xacro
launch/: full_system.launch.py  gazebo.launch.py  lidar_viz.launch.py  pc.launch.py
pc_core/: __init__.py  cmd_vel_bridge.py  processing_node.py  subscriber_node.py
rviz/: lidar.rviz
