<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.rnc" ?>
<package format="3">
  <name>pc_core</name>
  <version>0.1.0</version>
  <description>PC-side ROS 2 system for receiving and processing Raspberry Pi data</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
